--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,63 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+# Ignore Maven build output
+target/
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Ignore IntelliJ IDEA files
+.idea\
+*.iml
+*.iws
+
+# Ignore Eclipse files
+.project
+.classpath
+.settings/
+
+# Ignore macOS system files
+.DS_Store
+
+# Ignore logs and temp files
+logs/
+*.log
 hs_err_pid*
-replay_pid*
+.idea/misc.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/modules.xml
+
+# Ignore dependency directories
+node_modules/
+
+# Ignore OS-specific files
+Thumbs.db
+
+# Ignore JPA/Hibernate generated files
+*.h2.db
+*.mv.db
+*.db
+
+# Ignore environment and configuration files
+.env
+application.properties
+application.yml
+
+# Ignore compiled Java class files
+*.class
+
+# Ignore Lombok-generated files
+.lombok/
+
+# Ignore test reports
+surefire-reports/
+
+# Ignore Maven-specific files
+.mvn/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+
+# Ignore JetBrains-related files
+/out/
