--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=movie-api
+spring.datasource.url=jdbc:mysql://localhost:3306/movieapi_db
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
