--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+
+project.poster=posters/
