Movie Controller create operation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 
-project.poster=posters/
+poster.upload-dir=posters/
+base.url.file=http://localhost:8080/file/
