Documentation using swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 poster.upload-dir=posters/
 base.url.file=http://localhost:8080/file/
+
+springdoc.api-docs.path=/docs/api-docs
+springdoc.swagger-ui.path=/docs/swagger-ui.html
