Railway DB config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=movie-api
-spring.datasource.url=jdbc:mysql://localhost:3306/movieapi_db
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://root:IFWQnaqSAKYwYJJVgbWzChVBjOBfkGLH@interchange.proxy.rlwy.net:32797/railway
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
